Refactor CORS configuration to SecurityConfig only
Moved all CORS configuration to SecurityConfig and disabled GlobalCorsConfig to prevent conflicts. Updated allowed origins to support Vercel wildcard and localhost, allowed all headers, exposed useful headers, and set max age for preflight requests.